@@ -1,4 +1,5 @@
 0.08
+ - Update Module::Install to 1.21 version.
  - Update copyright years.
 
 0.07 2021-01-27T19:29:14+01:00
